# flask-systrans

./: README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  storage.db
app/controller/: dashboard.py  driver.py  index.py  passenger.py  report.py  ride.py  user.py  user_login.py  user_register.py  vehicle.py
app/model/forms/: driver.py  login.py  passenger.py  register.py  report.py  ride.py  vehicle.py
app/model/tables/: driver.py  passenger.py  person.py  ride.py  user.py  vehicle.py
app/static/css/: application.css  dashboard.css  forms.css  global.css  lists.css  report.css
app/templates/: application.html  base.html  dashboard.html  login.html  register.html  report.html
app/templates/driver/: list.html  register.html
app/templates/passenger/: list.html  register.html
app/templates/ride/: list.html  register.html
app/templates/vehicle/: list.html  register.html
migrations/versions/: 1b0af534e5fe_tables.py  6853c5f39e7a_rides_table.py  b326e82e0d9f_people_and_users.py  c4b7d9087210_change_autos_name_to_vehicles.py
